--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,91 @@
   <body>
     <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+    <form action="http://localhost:8080/" method="post">
+
+      <fieldset class="form__box">
+        <legend class="l">Personal information</legend>
+        <label class="input__field">
+          Surname:
+          <input type="text" autocomplete="off" name="Surname">
+        </label>
+        <label class="input__field">
+          Name:
+          <input type="text" autocomplete="off" name="Name"
+          required>
+        </label>
+        <label class="input__field">
+          How old are You?
+          <input type="number" name="Age" value="12"
+           min="1" max="100">
+        </label>
+        <label class="input__field">
+          Full date of birth:
+          <input type="date" name="Birthday">
+        </label>
+        <label class="input__field">
+          I accept the term of the agreement
+          <input type="checkbox" name="Terms">
+        </label>
+      </fieldset>
+
+      <fieldset class="form__box">
+        <legend class="l">Registration</legend>
+        <label class="input__field">
+          E-mail:
+          <input type="email" name="email" placeholder="`email@example.com`">
+        </label>
+        <label class="input__field">
+          Password:
+          <input type="password" name="password"
+           minlength="5" maxlength="10">
+        </label>
+      </fieldset>
+      <fieldset class="form__box">
+        <legend class="l">An interesting fact about you!</legend>
+        <label class="input__field">
+          Do you love cats?
+          <input type="radio" name="cats">Yes
+          <input type="radio" name="cats">No
+        </label>
+        <label class="input__field">
+          What is your favorit color?
+          <input type="color" name="color">
+        </label>
+        <label class="input__field">
+          What time do you go to bad?
+          <input type="time" name="sleep">
+        </label>
+        <label class="input__field">
+          What are you favorit brand of cars?
+          <select name="cars" multiple>
+            <option value="Mers">Mers</option>
+            <option value="BMW" selected>BMW</option>
+            <option value="Opel">Opel</option>
+            <option value="Audi">Audi</option>
+          </select>
+        </label>
+        <label class="input__field">
+          How do you rate our work?
+          <input type="range" min = "0" max = "10" >
+        </label>
+      </fieldset>
+      <fieldset class="form__box">
+        <legend class="l">Additional info:</legend>
+        <label class="input__field">
+          Comments
+          <textarea name="comments" autocomplete="off"
+           cols="20" rows="2"></textarea>
+        </label>
+        <label class="input__field">
+          Would you recommend us?
+          <select name="recommendation">
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+          </select>
+        </label>
+      </fieldset>
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
