--- a/src/index.html
+++ b/src/index.html
@@ -11,25 +11,36 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
-    <form action="http://localhost:8080/" method="post">
-
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
       <fieldset class="form__box">
         <legend class="l">Personal information</legend>
         <label class="input__field">
           Surname:
-          <input type="text" autocomplete="off" name="Surname">
+          <input
+            type="text"
+            autocomplete="off"
+            name="Surname"
+          >
         </label>
         <label class="input__field">
           Name:
-          <input type="text" autocomplete="off" name="Name"
-          required>
+          <input
+            type="text"
+            autocomplete="off"
+            name="Name"
+            required
+          >
         </label>
         <label class="input__field">
           How old are You?
-          <input type="number" name="Age" value="12"
-           min="1" max="100">
+          <input
+            type="number"
+            name="Age"
+            value="12"
+            min="1"
+            max="100"
+          >
         </label>
         <label class="input__field">
           Full date of birth:
@@ -40,17 +51,24 @@
           <input type="checkbox" name="Terms">
         </label>
       </fieldset>
-
       <fieldset class="form__box">
         <legend class="l">Registration</legend>
         <label class="input__field">
           E-mail:
-          <input type="email" name="email" placeholder="`email@example.com`">
+          <input
+            type="email"
+            name="email"
+            placeholder="`email@example.com`"
+          >
         </label>
         <label class="input__field">
           Password:
-          <input type="password" name="password"
-           minlength="5" maxlength="10">
+          <input
+            type="password"
+            name="password"
+            minlength="5"
+            maxlength="10"
+          >
         </label>
       </fieldset>
       <fieldset class="form__box">
@@ -79,15 +97,23 @@
         </label>
         <label class="input__field">
           How do you rate our work?
-          <input type="range" min = "0" max = "10" >
+          <input
+            type="range"
+            min = "0"
+            max = "10"
+          >
         </label>
       </fieldset>
       <fieldset class="form__box">
         <legend class="l">Additional info:</legend>
         <label class="input__field">
           Comments
-          <textarea name="comments" autocomplete="off"
-           cols="20" rows="2"></textarea>
+          <textarea name="comments"
+            autocomplete="off"
+            cols="20"
+            rows="2"
+          >
+          </textarea>
         </label>
         <label class="input__field">
           Would you recommend us?
